bug with search when backspacing result still is available even if search bar is empty

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -47,3 +47,8 @@ body {
 /* Header */
 
 
+header {
+    /* position: sticky;
+    z-index: 5;
+    top: 0; */
+}
